--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -10,7 +10,7 @@
 * {{rhymes|ædʒə(ɹ)|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage||badge|lang=enm}}, from {{etyl|xno|en}} {{term|bage||emblem|lang=fro}}, referring to the animal's badge-like white blaze.
+From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||badge}}, from {{etyl|xno|en}} {{m|fro|bage||emblem}}, referring to the animal's badge-like white blaze.
 
 ====Noun====
 [[Image:Meles meles MHNT.jpg|thumb|A badger]]
@@ -43,13 +43,13 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Afrikaans: {{t|af|ratel}}
 * Albanian: {{t+|sq|baldosë|f}}
 * Arabic: {{t|ar|غرير|m|tr=ġarīr|sc=Arab}}
-* Armenian: {{t|hy|գորշուկ|tr=goršuk}}, {{t|hy|փորսուղ|tr=p’orsuġ}}, {{t|hy|իշղար|tr=išġar}}
+* Armenian: {{t|hy|գորշուկ}}, {{t|hy|փորսուղ}}, {{t|hy|իշղար}}
 * Asturian: {{t|ast|texón|m}}, {{t|ast|melandru|m}}, {{t|ast|melón|m}}
 * Azeri: {{t+|az|porsuq}}
 * Basque: {{t+|eu|azkonar}}
-* Belarusian: {{t|be|барсук|m|tr=barsúk|sc=Cyrl}}
+* Belarusian: {{t|be|барсу́к|m|sc=Cyrl}}
 * Breton: {{t+|br|broc'h|m}}
-* Bulgarian: {{t+|bg|язовец|m|tr=jázovec|sc=Cyrl}}
+* Bulgarian: {{t+|bg|я́зовец|m|sc=Cyrl}}
 * Catalan: {{t|ca|teixó|m}}
 * Chechen: {{t|ce|дIама|sc=Cyrl}}
 * Cherokee: {{t|chr|ᎢᏃᎵ|tr=inoli|sc=Cher}}
@@ -66,10 +66,10 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * French: {{t+|fr|blaireau|m}}
 * Friulian: {{t|fur|tac}}, {{t|fur|tas}}
 * Galician: {{t+|gl|teixugo|m}}, {{t+|gl|porco teixo|m}}
-* Georgian: {{t|ka|მაჩვი|tr=mač’vi|sc=Geor}}
+* Georgian: {{t|ka|მაჩვი|sc=Geor}}
 * German: {{t+|de|Dachs|m}}
-* Gothic: {{t|got|𐌸𐌰𐌷𐍃𐌿𐍃|m|tr=þahsus|sc=Goth}}
-* Greek: {{t+|el|ασβός|m|tr=asvós}}
+* Gothic: {{t|got|𐌸𐌰𐌷𐍃𐌿𐍃|m|sc=Goth}}
+* Greek: {{t+|el|ασβός|m}}
 * Hebrew: {{t+|he|גִּירִית|f|tr=girit}}
 * Hungarian: {{t+|hu|borz}}
 * Icelandic: {{t|is|greifingi|m}}
@@ -89,12 +89,12 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Low German:
 *: German Low German: {{t|nds-de|tacks|m}}
 * Lower Sorbian: {{t|dsb|jazw}}, {{t|dsb|šwińc}}
-* Macedonian: {{t|mk|јазовец|m|tr=jázovec}}
+* Macedonian: {{t|mk|ја́зовец|m}}
 * Malay: {{t|ms|bejar}}
 * Manx: {{t|gv|broc}}
 * Maori: {{t|mi|pateri}}
 * Mazanderani: {{t|mzn|گورشکو|tr=gureško|sc=ps-Arab}}
-* Mongolian: {{t+|mn|дорго|tr=dorgo|sc=Cyrl}}
+* Mongolian: {{t+|mn|дорго|sc=Cyrl}}
 * Navajo: {{t|nv|nahashchʼidí}}
 * Norwegian: {{t+|no|grevling|m}}
 * Occitan: {{t+|oc|tais|m}}, {{t+|oc|rabàs|m}}
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Portuguese: {{t+|pt|texugo|m}}
 * Romanian: {{t+|ro|viezure|m}}, {{t+|ro|bursuc|m}}
 * Romansch: {{t|rm|tais}}
-* Russian: {{t+|ru|барсук|m|tr=barsúk}}
+* Russian: {{t+|ru|барсу́к|m}}
 * Sami: [[mievri]]
 * Sardinian: {{t|sc|tassu}}, {{t|sc|cane de ribu}}
 * Scottish Gaelic: {{t|gd|broc|m}}
@@ -119,7 +119,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Swedish: {{t+|sv|grävling|c}}
 * Taos: {{t|twf|kòlno’óna}}
 * Turkish: {{t+|tr|porsuk}}
-* Ukrainian: {{t+|uk|борсук|m|tr=borsúk|sc=Cyrl}}
+* Ukrainian: {{t+|uk|борсу́к|m|sc=Cyrl}}
 * Upper Sorbian: {{t|hsb|šwinc|m}}
 * Vietnamese: {{t|vi|con lửng}}
 * Volapük: {{t+|vo|daf}}
@@ -148,8 +148,8 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 
 =====Translations=====
 {{trans-top|pester}}
-* Armenian: {{t|hy|հետապնդել|tr=hetapndel}}, {{t|hy|հալածել|tr=halaçel}}, {{t|hy|ջղայնացնել|tr=ǰġaynac’nel}}, {{t|hy|հոգին հանել|tr=hogin hanel}}, {{t|hy|տեռորի տակ պահել|tr=teṙori tak pahel}}
-* Bulgarian: {{t+|bg|дразня|tr=draznja|sc=Cyrl}}, {{t+|bg|безпокоя|tr=bezpokoja|sc=Cyrl}}
+* Armenian: {{t|hy|հետապնդել}}, {{t|hy|հալածել}}, {{t|hy|ջղայնացնել}}, {{t|hy|հոգին հանել}}, {{t|hy|տեռորի տակ պահել}}
+* Bulgarian: {{t+|bg|дразня|sc=Cyrl}}, {{t+|bg|безпокоя|sc=Cyrl}}
 * Dutch: {{t+|nl|lastigvallen}}, {{t+|nl|plagen}}
 * Finnish: {{t+|fi|kiusata}}
 * German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
@@ -157,7 +157,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Greek: {{t+|el|ταράζω}}, {{t+|el|ζαλίζω}}
 * Hungarian: {{t+|hu|piszkál}}
 * Latin: {{t|la|sollicitō}}, {{t|la|inrītō}}, {{t|la|irrītō}}
-* Russian: {{t+|ru|дразнить|tr=draznit'|sc=Cyrl}}
+* Russian: {{t+|ru|дразнить|sc=Cyrl}}
 * Spanish: {{t+|es|fastidiar}}, {{t+|es|molestar}}
 * Tok Pisin: [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
 {{trans-bottom}}
@@ -185,7 +185,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 ==French==
 
 ===Etymology===
-From {{etyl|en|fr}} {{term|badge|lang=en}}
+From {{etyl|en|fr}} {{m|en|badge}}.
 
 ===Pronunciation===
 * {{IPA|/badʒe/|lang=fr}}
