--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -35,7 +35,7 @@
 ==German==
 
 ===Etymology===
-From {{etyl|goh|de}} {{term|bitten|lang=goh}}, from {{etyl|gem-pro|de}} {{m|gem-pro|*bidjaną}}, from {{etyl|ine-pro|de}} {{m|ine-pro|*gʷʰedʰ-}}. Compare Low German {{term|bidden|lang=nds}}, Dutch {{term|bidden|lang=nl}}, English {{term|bid|lang=en}}, Danish {{term|bede|lang=da}}.
+From {{etyl|goh|de}} {{m|goh|bitten}}, from {{etyl|gem-pro|de}} {{m|gem-pro|*bidjaną}}, from {{etyl|ine-pro|de}} {{m|ine-pro|*gʷʰedʰ-}}. Compare {{etyl|nds|-}} {{m|nds|bidden}}, {{etyl|nl|-}} {{m|nl|bidden}}, {{etyl|en|-}} {{m|en|bid}}, {{etyl|da|-}} {{m|da|bede}}.
 
 ===Pronunciation===
 * {{IPA|/ˈbɪtn̩/|ˈbɪtən|lang=de}}
@@ -58,7 +58,7 @@ From {{etyl|goh|de}} {{term|bitten|lang=goh}}, from {{etyl|gem-pro|de}} {{m|gem-
 ==Old High German==
 
 ===Etymology===
-From {{etyl|gem-pro|goh}} {{m|gem-pro|*bidjaną}}, whence also Old Saxon {{term|biddian|lang=osx}}, Old English {{term|biddan|lang=ang}}, Old Norse {{term|biðja|lang=non}}, Gothic {{term|𐌱𐌹𐌳𐌾𐌰𐌽|tr=bidjan|lang=got}}. Ultimately from {{etyl|ine-pro|goh}} {{m|ine-pro|*gʷʰedʰ-}}
+From {{etyl|gem-pro|goh}} {{m|gem-pro|*bidjaną}}, whence also {{etyl|osx|-}} {{m|osx|biddian}}, {{etyl|ang|-}} {{m|ang|biddan}}, {{etyl|non|-}} {{m|non|biðja}}, {{etyl|got|-}} {{m|got|𐌱𐌹𐌳𐌾𐌰𐌽}}. Ultimately from {{etyl|ine-pro|goh}} {{m|ine-pro|*gʷʰedʰ-}}
 
 ===Verb===
 {{head|goh|verb}}
