--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -313,7 +313,7 @@ From the noun ''mill''
 * {{R:Webster 1913}}
 
 ===External links===
-* {{projectlink|wikipedia}}
+* {{pedialite}}
 * {{projectlink|1911|Mill}}
 
 [[Category:en:Thousand]]
