/* See also */Restore pedialite using [[Project:AWB|AWB]] <whistle#28835747>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -261,7 +261,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 {{trans-bottom}}
 
 ===See also===
-* {{projectlink|wikipedia}}
+* {{pedialite}}
 {{Wikisource1911Enc Citation|Whistle}}
 
 [[ar:whistle]]
