/* See also */Restore pedialite using [[Project:AWB|AWB]] <CD-RW#28836068>

--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -12,7 +12,7 @@
 * {{sense|Compact Disk - Read Writable}} [[CD-E]] {{qualifier|dated}}
 
 ====See also====
-* {{projectlink|wikipedia}}
+* {{pedialite}}
 
 ====Translations====
 {{trans-top|Compact Disk - Read Writable}}
