--- a/en/c/CD-R.26223.wikitext
+++ b/en/c/CD-R.26223.wikitext
@@ -8,7 +8,7 @@
 # Compact Disk - Read only or Compact Disk - Recordable; a form of digital media that is based on the use of a laser to read from a plastic disc.  It can only be written to once.
 
 ===External links===
-{{projectlink|wikipedia}}
+{{pedialite}}
 
 ===Anagrams===
 * [[DRC#English|DRC]]
