/* See also */Restore pedialite using [[Project:AWB|AWB]] <dame#28836081>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -86,8 +86,8 @@ From {{etyl|fr|da}} {{term|dame||lady|lang=fr}}.
 
 ====See also====
 * {{list:playing cards/da}}
-* {{projectlink|wikipedia|lang=da}}
-* {{projectlink|wikipedia|Dame (kort)|lang=da}}
+* {{pedialite|lang=da}}
+* {{pedialite|Dame (kort)|lang=da}}
 
 ----
 
