--- a/en/l/lanner falcons.719902.wikitext
+++ b/en/l/lanner falcons.719902.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{head|en|plural}}
 
-# {{plural of|Lanner Falcon|lang=en}}
+# {{plural of|lanner falcon|lang=en}}
 
 [[ar:Lanner Falcons]]
 [[fr:Lanner Falcons]]
