t+lv:[[saderēt]] ([[WT:EDIT|Assisted]]) <bet#28846455>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -109,7 +109,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Italian: {{t|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=かける, kakeru}}
 * Jèrriais: {{t|roa-jer|gagi}}, {{t|roa-jer|pathier}}
-* Latvian: {{t|lv|derēt}}
+* Latvian: {{t|lv|derēt}}, {{t|lv|saderēt}}
 * Norwegian: {{t|no|vedde}}
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
 * Portuguese: {{t+|pt|apostar}}
