Category:Motor racing > Category:en:Motor racing <tire barrier#28861521>

--- a/en/t/tire barrier.801643.wikitext
+++ b/en/t/tire barrier.801643.wikitext
@@ -10,4 +10,4 @@
 ====References====
 [http://www.google.co.uk/books?id=CNcxmlddD2QC&pg=PA60&dq=tire+barrier&as_brr=3&sig=SKoC11qbFFG5CZKUQ6pS2ZGk4YQ] [http://www.google.co.uk/books?id=M6LDfx2Zk-AC&pg=PA57&dq=tire+barrier&as_brr=3&sig=hMaZJhV4XCm6JdQyrjO7bVhc9VY]
 
-[[Category:Motor racing]]
+[[Category:en:Motor racing]]
