--- a/en/d/dodgem.855185.wikitext
+++ b/en/d/dodgem.855185.wikitext
@@ -8,7 +8,7 @@
 {{en-noun}}
 
 # {{context|British|lang=en}} A [[bumper car]] in an [[amusement park]].
-#*'''2007''', "Special Offer," ''North Devon Gazette'' (UK), 19 Dec.:
+#*'''2007''' Dec. 19, "Special Offer," ''North Devon Gazette'' (UK):
 #*:What better way to let off a little steam, than by zipping around on the '''dodgems''', or flying high on the Cosmic Typhoon roller coaster?
 
 ====Translations====
