--- a/en/q/Qiana.4314.wikitext
+++ b/en/q/Qiana.4314.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+Introduced in the 1960s; originally a trademark of DuPont.
+
 ===Proper noun===
 {{en-proper noun}} 
 
