--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -1,6 +1,7 @@
 ==English==
 {{wikipedia|Bosporus}}
-[[File:Turkish Strait disambig.svg|thumb|Location of the Bosphorus (in red).]]
+[[File:Istambul and Bosporus big.jpg|thumb|upright=1.35|The Bosphorus from space.]]
+[[File:Turkish Strait disambig.svg|thumb|The Turkish Straits.]]
 ===Alternative forms===
 * [[Bosporus]]
 
@@ -14,11 +15,14 @@ From its {{etyl|grc}} name [[Βόσπορος Θρᾴκιος]] (''Bósporos Thr
 ===Proper noun===
 {{en-proper noun}}
 
-# {{context|geography}} The [[narrow]] [[waterway]] beside [[Istanbul]] [[connecting]] the [[Black Sea]] to the [[Sea of Marmara]] and the [[Mediterranean]].
+# {{context|geography}} The [[narrow]] [[waterway]] beside [[Istanbul]] [[connecting]] the [[Black Sea]] to the [[Sea of Marmara]], the [[northern]] [[end]] of the [[Turkish Straits]] [[connect]]ing the [[Black Sea]] with the [[Aegean]] and [[Mediterranean]].
 
 ====Synonyms====
 * [[Constantinople]] [[strait|Strait]]
 * [[Istanbul]] [[strait|Strait]]
+
+====Hypernym====
+* [[Turkish]] [[strait|Strait]](s)
 
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
