--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -130,7 +130,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 {{trans-bottom}}
 
 ===Etymology 2===
-{{etystub|lang=en|corruption of what?}}
+{{etystub|en|corruption of what?}}
 
 ====Noun====
 {{en-noun|-}}
