--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -132,6 +132,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
 * Latvian: {{t+|lv|svars|m}}
+* Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
 * Russian: {{t+|ru|груз|m|tr=gruz}}
