t+es:[[variopinto]] ([[WT:EDIT|Assisted]]) <multicolor#28887691>

--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -35,6 +35,7 @@ From {{etyl|la|en}} {{term|multicolor|lang=la}}; see below.
 * Portuguese: {{t|pt|multicor}}
 * Romanian: {{t+|ro|multicolor}}
 * Russian: {{t+|ru|многоцве́тный|sc=Cyrl}}, {{t+|ru|цветно́й|sc=Cyrl}}, {{t+|ru|многокра́сочный|sc=Cyrl}}
+* Spanish: {{t+|es|variopinto}}
 * Swedish: {{t+|sv|flerfärgad}}, {{t+|sv|mångfärgad}}
 {{trans-bottom}}
 
