--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -14,7 +14,7 @@
 * {{context|rare|lang=mul}} [[cd]]
 
 ====Number====
-{{head|mul|numeral symbol}}
+{{mul-number}}
 
 # A Roman numeral representing [[four hundred]] ([[400]]).
 
