--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -218,8 +218,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 ===Statistics===
 * {{rank|still|just|while|144|again|also|away|against}}
 
-===Usage Note===
-
+===Usage notes===
 The pronunciation /əˈɡeɪn/ is chiefly poetic.
 
 [[Category:200 English basic words]]
