--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -71,7 +71,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 ====Translations====
 {{trans-top|''transitive'' connect}}
 * Arabic: {{t|ar|ربط|tr=rabaṭa}}
-*: Egyptian Arabic: {{t|arz|ربط|tr=rabaṭ|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|ربط|tr=rabaṭ|sc=Arab}}, {{t|arz|وصل|tr=waṣal|sc=Arab}}
 * Belarusian: {{t|be|вязаць|tr=vjazác’|sc=Cyrl}}
 * Bulgarian: {{t+|bg|свързвам}}
 * Chinese:
