--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -71,6 +71,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Greek: {{t+|el|στοιχηματίζω}}
 {{trans-mid}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
+* Italian: {{t|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
 * Macedonian: {{t|mk|се коцка|tr=se kócka}}
 * Polish: {{t+|pl|ryzykować}}
