--- a/en/l/labourious.803568.wikitext
+++ b/en/l/labourious.803568.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Adjective===
-{{head|en}}
+{{head|en|adjective}}
 
-# the British spelling of '''{{l|en|laborious}}'''
+# {{lb|en|nonstandard}} {{alternative form of|from=UK|laborious|lang=en}}
 
 [[es:labourious]]
 [[my:labourious]]
