--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -4,7 +4,7 @@
 [[File:A aesthetic Bamboo poles.JPG|thumb]]
 
 ===Etymology===
-From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|bambu|lang=ms}}, from {{etyl|kn|en}} {{term|ಬಮ್ಬು|tr=bambu|lang=kn}}.
+From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|bambu|lang=ms}}, from {{etyl|kn|en}} {{term|ಬಂಬು|tr=|lang=kn}}.
 
 ===Pronunciation===
 * {{IPA|/bæmˈbu/|lang=en}}
