--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -30,7 +30,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 |passage=Meanwhile Nanny Broome was recovering from her initial panic and seemed anxious to make up for any kudos she might have lost, by exerting her personality to the utmost. She took the policeman's helmet and placed it on a chair, and unfolded his tunic to shake it and fold it up '''again''' for him.}}
 # {{context|obsolete|lang=en}} [[in return|In return]], as a reciprocal action; [[back]]. {{defdate|13th-19th c.}}
 #* '''1485''', {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book III:
-#*: Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne''' {{...}}
+#*: Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne'''&nbsp;[…].
 #* '''1603''', {{w|John Florio}}, translating {{w|Michel de Montaigne}}, ''Essays'', II.31:
 #*: So women are never angrie, but to the end a man should '''againe''' be angrie with them, therein imitating the lawes of Love.
 #*{{RQ:RBrtn AntmyMlncly}}, I.2.4.vii:
