--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -40,7 +40,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Interlingua: {{t|ia|si}}
 * Italian: {{t+|it|si}}, {{t+|it|già}}
 * Japanese: {{t|ja|うん|tr=un}}, {{t+|ja|そう|tr=sō}}, {{t+|ja|ええ|tr=ē}}, {{t+|ja|ああ|tr=ā}}
-* Korean: {{t+|ko|응|sc=Kore}}, {{t+|ko|네|sc=Kore}}, {{t+|ko|예|sc=Kore}}, {{t+|ko|응|sc=Kore}}, {{t+|ko|응|sc=Kore}}
+* Korean: {{t+|ko|응|sc=Kore}}, {{t+|ko|네|sc=Kore}}, {{t+|ko|예|sc=Kore}}, {{t+|ko|응|sc=Kore}}, {{t+|ko|응|sc=Kore}}, {{t+|ko|아|sc=Kore}}
 {{trans-mid}}
 * Navajo: {{t|nv|wehee}}
 * Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
