--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -25,7 +25,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 ====Translations====
 ''Note: Many languages have no equivalent of this word; in those cases, the translations given here are for'' '''yes'''.
 {{trans-top|yes}}
-* Arabic: {{t|ar|أيوة|tr='áywa}} {{qualifier|Eastern Arabic}}, {{t|ar|إية|tr='íyya}} {{qualifier|Western Arabic}}, {{t|ar|آ|tr='aa}} {{qualifier|Egyptian Arabic}}
+* Arabic: {{t|ar|أيوة|tr=ʾaywa}} {{qualifier|Eastern Arabic}}, {{t|ar|إية|tr=ʾiyya}} {{qualifier|Western Arabic}}, {{t|ar|آ|tr=ʾā}} {{qualifier|Egyptian Arabic}}
 * Catalan: {{t+|ca|sí}}
 * Chinese:
 *: Mandarin: {{t+|cmn|是啊|tr=shì a|sc=Hani}}, {{t|cmn|[[對]][[啊]]|sc=Hani}}, {{t|cmn|[[对]][[啊]]|tr=duì a|sc=Hani}}, {{t+|cmn|啊|tr=à|sc=Hani}}, {{t+|cmn|嗯|tr=ǹg|sc=Hani}}
@@ -34,13 +34,14 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Finnish: {{t+|fi|joo}}, {{t+|fi|juu}}
 * French: {{t+|fr|ouais}}
 * German: {{t+|de|ja}}, {{t+|de|jawohl}}
+* Greek: {{t+|el|ναι}}
 * Hindi: {{t+|hi|हाँ|tr=hā̃|sc=Deva}}
 * Hungarian: {{t+|hu|igen}}
 * Icelandic: {{t+|is|já}}
 * Interlingua: {{t|ia|si}}
 * Italian: {{t+|it|si}}, {{t+|it|già}}
 * Japanese: {{t|ja|うん|tr=un}}, {{t+|ja|そう|tr=sō}}, {{t+|ja|ええ|tr=ē}}, {{t+|ja|ああ|tr=ā}}
-* Korean: {{t+|ko|응|sc=Kore}}, {{t+|ko|네|sc=Kore}}, {{t+|ko|예|sc=Kore}}, {{t+|ko|응|sc=Kore}}, {{t+|ko|응|sc=Kore}}, {{t+|ko|아|sc=Kore}}
+* Korean: {{t+|ko|응|sc=Kore}}, {{t+|ko|네|sc=Kore}}, {{t+|ko|예|sc=Kore}}, {{t+|ko|응|sc=Kore}}, {{t+|ko|어|sc=Kore}}
 {{trans-mid}}
 * Navajo: {{t|nv|wehee}}
 * Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
@@ -56,18 +57,17 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Spanish: {{t+|es|sí}}
 * Swedish: {{t+|sv|ja|n}}
 * Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}}
-* Vietnamese: {{t|vi|ừ}} {{qualifier|informal}}<!-- does translate as "yeah" -->, {{t+|vi|ờ}} {{qualifier|informal}}<!-- also translates as "yeah" -->
+* Vietnamese: {{t|vi|ừ}} {{qualifier|informal}}, {{t+|vi|ờ}} {{qualifier|informal}}
 * Volapük: {{t+|vo|si}}
 * Welsh: {{t|cy|iah}}
 {{trans-bottom}}
-{{trans-top|expressing agreement}}
+
+{{trans-top|expressing joy}}
 * Finnish: {{t+|fi|joo}}
 * French: {{t+|fr|ouais}}
-* Greek: {{t+|el|ναι|tr=nai}}
 {{trans-mid}}
-* Japanese: {{t|ja|うん|tr=un|sc=Jpan}}
 * Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
-* Russian: {{t+|ru|да!|tr=da|sc=Cyrl}}, {{t+|ru|ура!|tr=ura|sc=Cyrl}}, {{t|ru|э-гей!|tr=e-gej|sc=Cyrl}}
+* Russian: {{t+|ru|да!|sc=Cyrl}}, {{t+|ru|ура́!|sc=Cyrl}}, {{t|ru|э-ге́й!|sc=Cyrl}}
 {{trans-bottom}}
 
 ===References===
