t+es:[[vodka]] ([[WT:EDIT|Assisted]]) <vodka#28933992>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -106,6 +106,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Greek: {{t+|el|βότκα|f|tr=vótka|sc=Grek}}
 {{trans-mid}}
 * Macedonian: {{t|mk|вотка|f|tr=vótka}}
+* Spanish: {{t+|es|vodka|m|f}}
 {{trans-bottom}}
 
 [[Category:en:Distilled beverages]]
