/* Adverb */ qua means "which way" (qua is? = which way are you going?) <qua#28958478>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -130,7 +130,7 @@ To ask for an object, use ''[[quan]]'' instead.
 # in so far as
 #: ''ens qua ens'' ("being as being")
 # where
-# in which direction, by which route (qua...ea...)
+# which way, in which direction, by which route (qua...ea...)
 
 ===Etymology 2===
 Inflection of {{term|quī||who, which|lang=la}}: Sanskrit {{term|किस्|tr=kis|lang=sa|pos=interrogative particle}}, {{term|कः|tr=kah|lang=sa||who}}; Ancient Greek {{term|τίς|lang=grc}}.
