--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -27,6 +27,7 @@
 {{trans-mid}}
 * Korean: {{t|ko|검치호|tr=geomchiho}} ({{t|ko|劍齒虎}})
 * Norwegian: {{t|no|sabeltanntiger|m}}, {{t|no|sabeltannkatt|m}}
+* Polish: {{t|pl|tygrys szablozębny|m}}
 * Portuguese: {{t|pt|tigre-dente-de-sabre|m}}
 * Russian: {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška}} {{qualifier|lit.: sabre-toothed cat}}, {{t+|ru|саблезубый тигр|m|tr=sablezúbyj tigr|sc=Cyrl}}
 * Spanish: {{t|es|diente de sable|m}}
