t+sh:[[stvar]] ([[WT:EDIT|Assisted]]) <thing#28960336>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -212,6 +212,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Finnish: {{t+|fi|kalu}}
 {{trans-mid}}
 * German: {{t|de|Ding|n}}
+* Serbo-Croatian: {{t+|sh|stvar|f}}
 {{trans-bottom}}
 
 {{trans-top|living being or creature}}
