t+it:[[consumo]] ([[WT:EDIT|Assisted]]) <consumption#28963189>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -63,6 +63,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * German: {{t+|de|Verbrauch|m}}, {{t|de|Verbrauchswert|m}}, {{t+|de|Verzehr|m}}
 {{trans-mid}}
 * Greek: {{t+|el|κατανάλωση|f|tr=katanálosi|sc=Grek}}
+* Italian: {{t+|it|consumo|m}}
 * Khmer: {{t|km|បម្រើបម្រាស់|tr=bom rer bom ras|sc=Khmr}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
