t+it:[[consunzione]] t+it:[[deperimento]] ([[WT:EDIT|Assisted]]) <consumption#28963205>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -76,6 +76,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Finnish: {{t|fi|riutuminen}}
 * Greek: {{t+|el|φθίση|f|tr=fthísi|sc=Grek}}
 {{trans-mid}}
+* Italian: {{t+|it|consunzione|f}}, {{t|it|deperimento|m}}
 * Russian: {{t+|ru|истощение|n|tr=istoščénije}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 {{trans-bottom}}
