--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -187,7 +187,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Malayalam: {{t-needed|ml}}
 * Maltese: {{t|mt|sempliċi}}
 * Manx: {{t|gv|oney}}, {{t|gv|macaintagh}}, {{t|gv|neuchialgagh}}
-* Marathi: {{t-needed|mr}}
+* Marathi: {{t|mr|सरळ|sc=Deva}}
 * Mirandese: {{t|mwl|lhano}}
 * Mongolian: {{t|mn|энгийн|sc=Cyrl}}
 * Nepali: {{t-needed|ne}}
