+translations <inside job#28984382>

--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -7,6 +7,10 @@
 #* '''1921''', [[w:Louis_Joseph_Vance|Louis Joseph Vance]], ''Alias The Lone Wolf'', ch. 10,
 #*: It seems to me it must have been what the police at home call "'''an inside job'''"; because whoever it was apparently knew the combination of the safe.
 
+=====Translations=====
+{{trans-top}}
+{{trans-bottom}}
+
 [[de:inside job]]
 [[et:inside job]]
 [[fi:inside job]]
