--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -9,6 +9,7 @@
 
 =====Translations=====
 {{trans-top}}
+* German: {{t|de|Inside Job|m|n}}
 * Polish: {{t|pl|robota wewnętrzna|f}}, {{t|pl|inside job|m}} {{qualifier|about a conspiracy theory}}
 {{trans-bottom}}
 
