--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -12,7 +12,7 @@
 * Finnish: {{t|fi|sisäpiirin keikka}}
 * German: {{t|de|Inside Job|m|n}}
 {{trans-mid}}
-* Polish: {{t|pl|robota wewnętrzna|f}}, {{t|pl|inside job|m}} {{qualifier|chiefly about conspiracy theories}}
+* Polish: {{t|pl|robota wewnętrzna|f}}, {{t|pl|inside job|m}} {{qualifier|chiefly conspiracy theories}}
 {{trans-bottom}}
 
 ----
@@ -29,7 +29,7 @@
 ===Noun===
 {{pl-noun|m}}
 
-# {{a|chiefly about conspiracy theories}} [[inside job#en|inside job]]
+# {{a|chiefly conspiracy theories}} [[inside job#en|inside job]]
 
 ====Declension====
 {{pl-decl-noun
