Neither "inside" nor "job" are words that are used in Polish. We shouldn't link to them... <inside job#28984974>

--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -28,7 +28,7 @@
 * {{hyphenation|in|si|de|job|lang=pl}}
 
 ===Noun===
-{{pl-noun|m}}
+'''inside job''' {{g|m}}
 
 # {{a|chiefly in conspiracy theories}} [[inside job#en|inside job]]
 
