/* Polish */ <inside job#28984978>

--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -43,6 +43,10 @@
 |inside jobie|inside joby
 }}
 
+[[Category:Polish lemmas]]
+[[Category:Polish nouns]]
+[[Category:Polish masculine nouns]]
+
 [[de:inside job]]
 [[et:inside job]]
 [[fi:inside job]]
