--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -20,8 +20,8 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 # {{context|intransitive|of an ink or dye|lang=en}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 # {{context|transitive|lang=en}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
 # {{context|obsolete|transitive|lang=en}} To bleed on; to make bloody.
-#* '''1485''', Sir Thomas Malory, ''Le Morte Darthur'', Book VIII:
-#*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.
+#*{{RQ:Mlry MrtArthr1|VIII}}:
+#*:And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.
 # {{context|intransitive|copulative|lang=en}} To show one's group loyalty by showing (its associated color) in one's blood.
 #: ''He was a devoted Vikings fan: he '''bled''' purple.''
 # To lose sap, gum, or juice.
