--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -8,7 +8,7 @@ From the {{etyl|grc|el}} {{term|Ἰσραήλ|Ἰσρᾱήλ|Israel|lang=grc}}.
 * {{IPA|[izaˈil]|lang=el}}
 
 ===Proper noun===
-{{el-noun-proper|n|Israíl|inv}}
+{{el-noun-proper|n|inv}}
 
 # [[Israel]] {{qualifier|state ancient and modern}}
 # [[Israel]] {{qualifier|Biblical character}}
