--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -16,6 +16,8 @@ From the prefix [[mini-]] (from Latin).
 {{en-noun}}
 
 # A [[miniskirt]].
+#* '''2010''', Donna Freitas, ''The Possibilities of Sainthood''
+#*: All Normal Catholic Schoolgirls had creative ways of sluttifying our pure-as-the-driven-snow required attire. {{...}} Most important is rolling your skirt so that it is a virtual '''mini''' {{...}}
 # {{context|dated|lang=en}} A [[minicomputer]].
 
 {{head|en|plural}}
