--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -29,7 +29,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 |title=[http://openlibrary.org/works/OL2004261W The China Governess]
 |passage=Meanwhile Nanny Broome was recovering from her initial panic and seemed anxious to make up for any kudos she might have lost, by exerting her personality to the utmost. She took the policeman's helmet and placed it on a chair, and unfolded his tunic to shake it and fold it up '''again''' for him.}}
 #{{context|obsolete|lang=en}} [[in return|In return]], as a reciprocal action; [[back]]. {{defdate|13<sup>th</sup>-19<sup>th</sup>c.}}
-#*{{RQ:Mlry MrtArthr1|III}}:
+#*{{RQ:Mlry MrtDrthr|5.1|2|III|I}}:
 #*:Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne'''{{nb...}}.
 #*{{RQ:Flr Mntgn Essays}}, II.31:
 #*:So women are never angrie, but to the end a man should '''againe''' be angrie with them, therein imitating the lawes of Love.
