--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -5,9 +5,16 @@
 
 # One who hands over or transmits; a conveyor in succession
 #:{{rfquotek|John Dryden}}
-# {{cx|in combinations}} Having, using, or requiring, a certain number of [[hand]]s
+# {{cx|in combinations}} Having, using, or requiring, a certain hand, or number of [[hand]]s
 #* '''2010''', Chris Lewit, ''Tennis Technique Bible Volume One''
 #*:Two-'''handers''' generally do not transition to the net as quickly or as often as one-'''handers'''. This, to me, however, is just a coaching failure rather than a technical limitation.
+
+====Derived terms====
+* [[glad-hander]]
+* [[left-hander]]
+* [[no-hander]]
+* [[right-hander]]
+* [[single-hander]]
 
 ====Translations====
 {{trans-top|a conveyor in succession}}
