/* Hungarian */ +audio <CD#28998659>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -145,6 +145,7 @@ From {{etyl|en|hu}} {{term|CD|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/ˈt͡seːdeː/|lang=hu}}
+* {{audio|Hu-cédé.ogg|Audio|lang=hu}}
 
 ===Noun===
 {{hu-noun|-k}}
