--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -21,7 +21,7 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from its {{etyl|grc|en}
 * [[Constantinople]] [[strait|Strait]]
 * [[Istanbul]] [[strait|Strait]]
 
-====Hypernym====
+====Hypernyms====
 * [[Turkish]] [[strait|Strait]](s)
 
 ====Related terms====
