--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -6,7 +6,7 @@
 * [[Bosporus]]
 
 ===Etymology===
-From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from its {{etyl|grc|en}} name [[Βόσπορος Θρᾴκιος]] (''Bósporos Thrákios'', "[[Thracian]] [[strait|Strait]]"), retained and simplified in English in part due to a [[folk etymology]] ([[βοὸς]] [[πόρος]], ''boòs'' ''póros'', "[[cow]] [[ford]]") connecting it to the legend of the wandering [[Io]].
+From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{m|grc|Βόσπορος}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈbɒs.fəɹ.əs/|/ˈbɒs.pəɹ.əs/|lang=en}}
