--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -8,7 +8,7 @@ From a variation of {{term|yea|lang=en}}, itself from {{etyl|enm|en}} {{term|ya|
 Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|yes|lang=en}}. For further etymology, see {{l|en|yes}}.<ref>Webster's Third New International Dictionary, Unabridged. 2003.</ref>
 
 ===Pronunciation===
-* {{IPA|/jɛ/|lang=en}}, {{IPAchar|/jɛə/}} or {{IPAchar|/jæ/}}
+* {{IPAchar|/jɛə/}}, {{IPA|/jɛ/|lang=en}}, or {{IPAchar|/jæ/}}
 * {{audio|en-us-yeah.ogg|Audio (US)|lang=en}}
 * {{audio|en-us-yeah-interjection.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɛə|lang=en}}
