--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -125,8 +125,9 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Greek: {{t+|el|σφύριγμα|n|tr=sfýrigma|sc=Grek}}, {{t|el|σφυριξιά|f|tr=sfyrixiá|sc=Grek}}
 * Hungarian: {{t|hu|füttyszó}}
 * Italian: {{t+|it|fischio|m}}
-{{trans-mid}}
 * Japanese: {{t|ja|口笛|tr=[[くちぶえ]], kuchibue}}
+{{trans-mid}}
+* Latvian: {{t|lv|svilpiens|m}}
 * Malay: {{t|ms|siulan}}
 * Polish: {{t|pl|gwizd|m}}
 * Portuguese: {{t+|pt|apito|m}}, {{t+|pt|assobio|m}}, {{t+|pt|assovio|m}}
