--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -40,8 +40,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 |mc=y
 |oc=y
 |ma=y
-|cat=n
-}}
+|cat=n}}
 
 ===Noun===
 {{zh-noun}}
@@ -125,11 +124,12 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * [[十一月]] shíyīyuè - November
 * [[十二月]] shíèryuè - December
 
-[[Category:Beginning Mandarin|yue4]]
+{{zh-cat|Beginning}}
 
 ----
 
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=1|rs=月00}}
 
@@ -204,6 +204,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{der-bottom}}
 
 ===Pronunciation===
+{{ja-kanjitab|つき|yomi=k}}
 {{ja-pron|つき|acc=o|y=k}}
 
 ====Noun====
@@ -217,6 +218,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 # {{context|tarot|lang=ja}}: The [[moon|Moon]]; the eighteenth [[trump]] or [[major arcana]] [[card]] in most traditional Tarot decks.  
 
 =====Synonyms=====
+{{ja-kanjitab|がつ|yomi=o}}
 * {{sense|the moon}} {{l|ja|太陰}}, {{l|ja|ムーン}}
 
 ===Suffix===
@@ -244,8 +246,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 [[Category:1000 Japanese basic words|つき]]
 [[Category:ja:Astronomy|つき]]
 [[Category:ja:Time|つき]]
-[[Category:Japanese terms written with one Han script character]]
-[[Category:Japanese terms spelled with 月]]
+
 ----
 
 ==Korean==
