--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -250,6 +250,7 @@ Cognate to {{etyl|stv|-}} {{term||tr=sa:r|lang=stv}}.
 [[kk:sir]]
 [[ku:sir]]
 [[lo:sir]]
+[[lv:sir]]
 [[lt:sir]]
 [[li:sir]]
 [[hu:sir]]
