--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -509,6 +509,7 @@ Borrowed from {{etyl|la|fro}} {{term|simplex|lang=la}}.
 [[sw:simple]]
 [[ku:simple]]
 [[lo:simple]]
+[[lv:simple]]
 [[lt:simple]]
 [[li:simple]]
 [[hu:simple]]
