t+jv:[[babi]] ([[WT:EDIT|Assisted]]) <pig#29024345>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -177,6 +177,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Irish: {{t+|ga|muc|f}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
+* Javanese: {{t+|jv|babi}}
 * Jèrriais: {{t|roa-jer|couochon|m}}, {{t|roa-jer|bête à saie|f}}, {{t|roa-jer|por|m}}, {{t|roa-jer|gronneux|m}}, {{t|roa-jer|moussieu|m}}, {{t|roa-jer|quétot|m}}
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Kannada: {{t+|kn|ಹಂದಿ|tr=handi|sc=Knda}}
