--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -15,7 +15,7 @@ The word is sometimes considered to come from an {{etyl|xno|-}} derivative of {{
 {{en-noun|dormice}}
 
 # Any of several species of small, mostly [[European]] [[rodent]]s of the family [[Gliridae]]; also called [[Myoxidae]] or ''{{taxlink|Muscardinidae|family|noshow=1}}'' by some taxonomists.
-# {{context|UK|lang=en}} {{taxlink|Muscardinus avellanarius|species|noshow=1}}, the {{vern|hazel dormouse}}.
+# {{context|UK|lang=en}} {{taxlink|Muscardinus avellanarius|species|noshow=1}}, the {{vern|hazel dormouse|pedia=1}}.
 # {{context|figuratively|lang=en}} A person who sleeps a great deal, or who falls asleep readily (by analogy with the sound hibernation of the dormouse).
 
 ====Translations====
