--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -82,12 +82,15 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Armenian: {{t|hy|աղաց}}, {{t|hy|ջրաղաց}}
 * Aromanian: {{t|rup|moarã|f}}
 * Asturian: {{t|ast|molín|m}}
+* Azeri: {{t+|az|dəyirman}}
 * Bashkir: {{t|ba|тирмән|sc=Cyrl}}
 * Belarusian: {{t|be|млын|m|sc=Cyrl}}
 * Bulgarian: {{t+|bg|ме́лница|f|sc=Cyrl}}
 * Catalan: {{t+|ca|molí|m}}
+* Chechen: {{t|ce|хьер}}
 * Chinese:
 *: Mandarin: {{t+|cmn|磨坊|tr=mòfāng|sc=Hani}}
+* Chuvash: {{t|cv|арман|sc=Cyrl}}
 * Czech: {{t+|cs|mlýn|m}}
 * Danish: {{t+|da|mølle|c}}
 * Dutch: {{t+|nl|molen|m}}
@@ -98,25 +101,30 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * French: {{t+|fr|moulin|m}}
 * Friulian: {{t|fur|mulìn|m}}
 * Galician: {{t+|gl|muíño|m}}
+* Georgian: {{t|ka|წისქვილი|sc=Geor}}
 * German: {{t+|de|Mühle|f}}
 * Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f|sc=Grek}}
 * Hebrew: {{t|he|טחנה|tr=takhánah}}
 * Hungarian: {{t+|hu|malom}}
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
+* Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Korean: {{t+|ko|방아}}, {{t+|ko|방앗간}} {{qualifier|the building}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاش}}
 {{trans-mid}}
 * Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
 * Latvian: {{t|lv|malējs}}
+* Lithuanian: {{t+|lt|malūnas|m}}
 * Luxembourgish: {{t|lb|Millen|f}}
 * Macedonian: {{t|mk|млин|m}}, {{t|mk|ме́лница|f}}
+* Moksha: {{t|mdf|ведькев}}
 * Norwegian:
 *: Bokmål {{t+|no|mølle|m|f}}
 *: Nynorsk: {{t|nn|mylne|f}}, {{t+|no|mølle|f}}
 * Occitan: {{t+|oc|molin|m}}
 * Old High German: {{t|goh|mulin|f}}
+* Ossetian: {{t|os|куырой|sc=Cyrl}}
 * Persian: {{t+|fa|آسیا|tr=âsyâ|sc=fa-Arab}}, {{t+|fa|آس|tr=âs|sc=fa-Arab}} {{qualifier|archaic}}
 * Polish: {{t+|pl|młyn|m}}
 * Portuguese: {{t|pt|moenda|f}}, {{t+|pt|moinho|m}}
@@ -132,8 +140,10 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Slovene: {{t+|sl|mlin|m}}
 * Spanish: {{t+|es|molino|m}}
 * Swedish: {{t+|sv|kvarn|c}}
+* Tajik: {{t|tg|осиё|sc=Cyrl}}, {{t|tg|осиёб|sc=Cyrl}}
 * Turkish: {{t+|tr|değirmen}}
 * Ukrainian: {{t|uk|млин|m|sc=Cyrl}}
+* Uzbek: {{t|uz|tegirmon}}
 * Vietnamese: {{t+|vi|cối xay}}
 * Welsh: {{t|cy|melin|f}}
 {{trans-bottom}}
