--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -105,14 +105,15 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * German: {{t+|de|Mühle|f}}
 * Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f|sc=Grek}}
 * Hebrew: {{t|he|טחנה|tr=takhánah}}
+* Hindi: {{t|hi|चक्की|f|tr=cakkī|sc=Deva}}
 * Hungarian: {{t+|hu|malom}}
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Korean: {{t+|ko|방아}}, {{t+|ko|방앗간}} {{qualifier|the building}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاش}}
-{{trans-mid}}
 * Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
 * Latvian: {{t|lv|malējs}}
 * Lithuanian: {{t+|lt|malūnas|m}}
