--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -111,9 +111,10 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Korean: {{t+|ko|방아}}, {{t+|ko|방앗간}} {{qualifier|the building}}
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاش}}
+{{trans-mid}}
+* Kyrgyz: {{t|ky|тегирмен|sc=Cyrl}}
 * Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
 * Latvian: {{t|lv|malējs}}
 * Lithuanian: {{t+|lt|malūnas|m}}
@@ -142,7 +143,9 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Spanish: {{t+|es|molino|m}}
 * Swedish: {{t+|sv|kvarn|c}}
 * Tajik: {{t|tg|осиё|sc=Cyrl}}, {{t|tg|осиёб|sc=Cyrl}}
+* Tatar: {{t+|tt|тегермән|sc=Cyrl}}
 * Turkish: {{t+|tr|değirmen}}
+* Turkmen: {{t|tk|degirmen}}
 * Ukrainian: {{t|uk|млин|m|sc=Cyrl}}
 * Uzbek: {{t|uz|tegirmon}}
 * Vietnamese: {{t+|vi|cối xay}}
