t+crh:[[degirmen]] t+crh:[[termen]] ([[WT:EDIT|Assisted]]) <mill#29049279>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Chinese:
 *: Mandarin: {{t+|cmn|磨坊|tr=mòfāng|sc=Hani}}
 * Chuvash: {{t|cv|арман|sc=Cyrl}}
+* Crimean Tatar: {{t|crh|degirmen}}, {{t|crh|termen}}
 * Czech: {{t+|cs|mlýn|m}}
 * Danish: {{t+|da|mølle|c}}
 * Dutch: {{t+|nl|molen|m}}
