t+ru:[[дробилка]] ([[WT:EDIT|Assisted]]) <mill#29049297>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -133,7 +133,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Portuguese: {{t|pt|moenda|f}}, {{t+|pt|moinho|m}}
 * Romanian: {{t+|ro|moară}}
 * Romansch: {{t|rm|mulin|m}}, {{t|rm|mulegn}}
-* Russian: {{t+|ru|ме́льница|f}}
+* Russian: {{t+|ru|ме́льница|f}}, {{t+|ru|дроби́лка|f|sc=Cyrl}}
 * Sardinian: {{t|sc|molinu}}, {{t|sc|mulinu}}
 * Scottish Gaelic: {{t|gd|muileann|m|f}}
 * Serbo-Croatian:
