/* Translations */ +el <moneylender#29080184>

--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -15,8 +15,9 @@
 {{trans-top|person who lends money}}
 * Finnish: {{t+|fi|rahanlainaaja}}
 * Georgian: {{t|ka|მევახშე|tr=mevaxše|sc=Geor}}
-* Portuguese: {{t|pt|agiota|c}}
+* Greek: {{t+|el|τοκιστής|m}}
 {{trans-mid}}
+* Portuguese: {{t|pt|agiota|c}}
 * Russian: {{t+|ru|ростовщи́к|m|sc=Cyrl|tr=rostovščík}}
 * Spanish: {{t|es|prestamista|m|f}}
 {{trans-bottom}}
