--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -26,17 +26,17 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Afrikaans: {{t|af|wodka}}
 * Albanian: {{t|sq|vodkë|f}}
 * Arabic: {{t|ar|فودكا|f|tr=vodka, fūdka}}
-* Armenian: {{t+|hy|օղի|tr=òġi}}, {{qualifier|colloquial}} {{t|hy|արաղ|tr=araġ}}
+* Armenian: {{t+|hy|օղի}}, {{qualifier|colloquial}} {{t|hy|արաղ}}
 * Asturian: {{t|ast|vodca|m}}
 * Azeri: {{t|az|araq}}
 * Basque: {{t|eu|vodka}}
-* Belarusian: {{t|be|гарэлка|f|tr=harélka}}, {{t|be|водка|f|tr=vódka}}
-* Bengali: {{t|bn|ভদকা|tr=vôdka|sc=Beng}}
-* Bulgarian: {{t+|bg|водка|f|tr=vódka}}
+* Belarusian: {{t|be|гарэ́лка|f}}, {{t|be|во́дка|f}}
+* Bengali: {{t|bn|ভদকা|tr=bhôdka|sc=Beng}}
+* Bulgarian: {{t+|bg|во́дка|f}}
 * Burmese: {{t+|my|ဗော့ဒ်ကာ|sc=Mymr}}
 * Catalan: {{t|ca|vodka|f}}
 * Chinese:
-*: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiā-jiǔ|sc=Hani}}, {{t+|cmn|伏特加|tr=fútèjiā|sc=Hani}}
+*: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiājiǔ|sc=Hani}}, {{t+|cmn|伏特加|tr=fútèjiā|sc=Hani}}
 * Czech: {{t+|cs|vodka|f}}
 * Danish: {{t|da|vodka|c}}
 * Dutch: {{t+|nl|wodka|m}}
@@ -47,7 +47,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Galician: {{t|gl|vodka}}
 * Georgian: {{t|ka|არაყი|sc=Geor}}, {{qualifier|obsolete}} {{t|ka|იყი|sc=Geor}}
 * German: {{t+|de|Wodka|m}}
-* Greek: {{t+|el|βότκα|f|tr=vótka}}
+* Greek: {{t+|el|βότκα|f}}
 * Gujarati: {{t|gu|વોડકા|tr=voḍkā|sc=Gujr}}
 * Hebrew: {{t+|he|ווֹדְקָה|f|tr=vodka}}
 * Hindi: {{t|hi|वोदका|f|tr=vodkā}}, {{t|hi|वोडका|f|tr=voḍkā|sc=Deva}}
@@ -58,29 +58,29 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t|ja|ウォッカ|tr=wokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
 * Jèrriais: {{t|roa-jer|vodka|m}}
-* Kazakh: {{t|kk|водка|tr=vodka|sc=Cyrl}}
+* Kazakh: {{t|kk|водка|sc=Cyrl}}
 * Korean: {{t+|ko|보드카|sc=Hang}}
 {{trans-mid}}
-* Kyrgyz: {{t|ky|водка|tr=vodka|sc=Cyrl}}
+* Kyrgyz: {{t|ky|водка|sc=Cyrl}}
 * Kölsch: {{t|ksh|wodka}}
 * Latgalian: {{t|ltg|braņdīņs}}
 * Latin: {{t|la|vodca|f}}
 * Latvian: {{t|lv|degvīns|m}}, {{t|lv|šņabis|m}}
 * Lithuanian: {{t|lt|degtinė|f}}, {{t|lt|vodka|f}}
 * Luxembourgish: {{t|lb|Wodka}}
-* Macedonian: {{t|mk|вотка|f|tr=vótka}}
+* Macedonian: {{t|mk|во́тка|f}}
 * Malay: {{t|ms|vodka}}
 * Maltese: {{t|mt|vodka|f}}
 * Mongolian: {{t|mn|цагаан архи|sc=Cyrl}}
 * Norwegian: 
 *: Bokmål: {{t|nb|vodka|m}}
 *: Nynorsk: {{t|nn|vodka|m}}
-* Ossetian: {{t|os|арахъ|tr=araq|sc=Cyrl}}
+* Ossetian: {{t|os|арахъ|sc=Cyrl}}
 * Persian: {{t+|fa|ودکا|tr=vodkâ}}
 * Polish: {{t+|pl|wódka|f}}
 * Portuguese: {{t+|pt|vodca|f}}
 * Romanian: {{t+|ro|vodcă|f}}
-* Russian: {{t+|ru|водка|f|tr=vódka}}, {{qualifier|regional, Ukraine, South Russia}} {{t+|ru|горелка|f|tr=gorélka|sc=Cyrl}}
+* Russian: {{t+|ru|во́дка|f}}, {{t+|ru|горе́лка|f|sc=Cyrl}} {{qualifier|regional, Ukraine, South Russia}}
 * Samogitian: {{t|sgs|arielka|f}}, {{t|sgs|degtėnė|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|вотка|f|sc=Cyrl}}
@@ -90,12 +90,12 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Spanish: {{t+|es|vodka|f}}
 * Swahili: {{t|sw|vodka}}
 * Swedish: {{t+|sv|vodka|c}}
-* Tamil: {{t|ta|ஓட்கா|tr=oṭkā|sc=Taml}}
-* Tatar: {{t|tt|водка|tr=vodka|sc=Cyrl}}
-* Telugu: {{t|te|వోడ్కా|tr=voḍkā|sc=Telu}}
+* Tamil: {{t|ta|ஓட்கா|sc=Taml}}
+* Tatar: {{t|tt|водка|sc=Cyrl}}
+* Telugu: {{t|te|వోడ్కా|sc=Telu}}
 * Thai: {{t|th|วอดก้า|tr=wôt gâa}}
 * Turkish: {{t+|tr|votka}}
-* Ukrainian: {{t|uk|горілка|f|tr=horílka}}, {{t|uk|водка|f|tr=vódka}}
+* Ukrainian: {{t|uk|горі́лка|f}}, {{t|uk|во́дка|f}}
 * Urdu: {{t|ur|وودکا|f|tr=vodkā|sc=ur-Arab}}, {{t|ur|ووڈکا|f|tr=voḍkā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|vodka}}, {{t|vi|vôtca}}, {{t|vi|rượu vôtca}}, {{t|vi|rượu vodka}}
 * Yiddish: {{t|yi|מאַשקע|sc=Hebr}}
@@ -103,9 +103,9 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 
 {{trans-top|serving}}
 * Finnish: {{t+|fi|votka}}, {{t+|fi|ryyppy|alt=votkaryyppy}}
-* Greek: {{t+|el|βότκα|f|tr=vótka|sc=Grek}}
+* Greek: {{t+|el|βότκα|f|sc=Grek}}
 {{trans-mid}}
-* Macedonian: {{t|mk|вотка|f|tr=vótka}}
+* Macedonian: {{t|mk|во́тка|f}}
 * Spanish: {{t+|es|vodka|m|f}}
 {{trans-bottom}}
 
