t+tk:[[arak]] t-balance t+uz:[[aroq]] t+si:[[වොඩ්කා]] t+xal:[[әрк]] t+tt:[[аракы]] t+hsb:[[wódka]] t+dsb:[[wodka]] t+inh:[[къаракъ]] t+kk:[[арақ]] t+sah:[[үрүҥ арыгы]] t+cmn:[[白酒]] t+tg:[[арақ]] t+tg:[[... <vodka#29088050>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -36,7 +36,8 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Burmese: {{t+|my|ဗော့ဒ်ကာ|sc=Mymr}}
 * Catalan: {{t|ca|vodka|f}}
 * Chinese:
-*: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiājiǔ|sc=Hani}}, {{t+|cmn|伏特加|tr=fútèjiā|sc=Hani}}
+*: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiājiǔ|sc=Hani}}, {{t+|cmn|伏特加|tr=fútèjiā|sc=Hani}}, {{t+|cmn|白酒|tr=báijiŭ|sc=Hani}}
+* Chuvash: {{t|cv|водка|sc=Cyrl}}
 * Czech: {{t+|cs|vodka|f}}
 * Danish: {{t|da|vodka|c}}
 * Dutch: {{t+|nl|wodka|m}}
@@ -54,17 +55,19 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Hungarian: {{t+|hu|vodka}}
 * Icelandic: {{t+|is|vodka|f}}
 * Indonesian: {{t+|id|vodka}}
+* Ingush: {{t|inh|къаракъ}}
 * Irish: {{t|ga|vodca|m}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t|ja|ウォッカ|tr=wokka}}, {{t|ja|ヴォートカ|tr=vōtoka}}
 * Jèrriais: {{t|roa-jer|vodka|m}}
-* Kazakh: {{t|kk|водка|sc=Cyrl}}
+* Kalmyk: {{t|xal|әрк}}
+* Kazakh: {{t|kk|водка|sc=Cyrl}}, {{t|kk|арақ|sc=Cyrl}}
 * Korean: {{t+|ko|보드카|sc=Hang}}
-{{trans-mid}}
 * Kyrgyz: {{t|ky|водка|sc=Cyrl}}
 * Kölsch: {{t|ksh|wodka}}
 * Latgalian: {{t|ltg|braņdīņs}}
 * Latin: {{t|la|vodca|f}}
+{{trans-mid}}
 * Latvian: {{t|lv|degvīns|m}}, {{t|lv|šņabis|m}}
 * Lithuanian: {{t|lt|degtinė|f}}, {{t|lt|vodka|f}}
 * Luxembourgish: {{t|lb|Wodka}}
@@ -85,19 +88,27 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|вотка|f|sc=Cyrl}}
 *: Latin: {{t+|sh|votka|f}}
+* Sinhalese: {{t|si|වොඩ්කා|sc=Sinh}}
 * Slovak: {{t|sk|vodka|f}}
 * Slovene: {{t|sl|vodka|f}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|wodka|f}}
+*: Upper Sorbian: {{t|hsb|wódka|f}}
 * Spanish: {{t+|es|vodka|f}}
 * Swahili: {{t|sw|vodka}}
 * Swedish: {{t+|sv|vodka|c}}
+* Tajik: {{t|tg|арақ|sc=Cyrl}}, {{t|tg|водка|sc=Cyrl}}
 * Tamil: {{t|ta|ஓட்கா|sc=Taml}}
-* Tatar: {{t|tt|водка|sc=Cyrl}}
+* Tatar: {{t|tt|водка|sc=Cyrl}}, {{t+|tt|аракы|sc=Cyrl}}
 * Telugu: {{t|te|వోడ్కా|sc=Telu}}
 * Thai: {{t|th|วอดก้า|tr=wôt gâa}}
 * Turkish: {{t+|tr|votka}}
+* Turkmen: {{t+|tk|arak}}
 * Ukrainian: {{t|uk|горі́лка|f}}, {{t|uk|во́дка|f}}
 * Urdu: {{t|ur|وودکا|f|tr=vodkā|sc=ur-Arab}}, {{t|ur|ووڈکا|f|tr=voḍkā|sc=ur-Arab}}
+* Uzbek: {{t+|uz|aroq}}
 * Vietnamese: {{t+|vi|vodka}}, {{t|vi|vôtca}}, {{t|vi|rượu vôtca}}, {{t|vi|rượu vodka}}
+* Yakut: {{t|sah|үрүҥ арыгы|sc=Cyrl}}
 * Yiddish: {{t|yi|מאַשקע|sc=Hebr}}
 {{trans-bottom}}
 
