--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -64,7 +64,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Kazakh: {{t|kk|водка|sc=Cyrl}}, {{t|kk|арақ|sc=Cyrl}}
 * Korean: {{t+|ko|보드카|sc=Hang}}
 * Kyrgyz: {{t|ky|водка|sc=Cyrl}}
-* Kölsch: {{t|ksh|wodka}}
+* Kölsch: {{t|ksh|Wodka}}
 * Latgalian: {{t|ltg|braņdīņs}}
 * Latin: {{t|la|vodca|f}}
 {{trans-mid}}
