[[lv:seize]] <seize#29088720>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -187,6 +187,7 @@ From {{etyl|fro|roa-jer}} {{term|seize|lang=fro}}, from {{etyl|la|roa-jer}} {{te
 [[kn:seize]]
 [[ku:seize]]
 [[lo:seize]]
+[[lv:seize]]
 [[lt:seize]]
 [[li:seize]]
 [[hu:seize]]
