--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -105,10 +105,10 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Telugu: {{t|te|వోడ్కా|sc=Telu}}
 * Thai: {{t|th|วอดก้า|tr=wôt gâa}}
 * Turkish: {{t+|tr|votka}}
-* Turkmen: {{t+|tk|arak}}
+* Turkmen: {{t+|tk|arak}}, {{t|tk|wodka}}
 * Ukrainian: {{t|uk|горі́лка|f}}, {{t|uk|во́дка|f}}
 * Urdu: {{t|ur|وودکا|f|tr=vodkā|sc=ur-Arab}}, {{t|ur|ووڈکا|f|tr=voḍkā|sc=ur-Arab}}
-* Uzbek: {{t+|uz|aroq}}
+* Uzbek: {{t+|uz|aroq}}, {{t|uz|vodka}}
 * Vietnamese: {{t+|vi|vodka}}, {{t|vi|vôtca}}, {{t|vi|rượu vôtca}}, {{t|vi|rượu vodka}}
 * Yakut: {{t|sah|үрүҥ арыгы|sc=Cyrl}}
 * Yiddish: {{t|yi|מאַשקע|sc=Hebr}}
