Reverted edits by [[Special:Contributions/66.114.25.23|66.114.25.23]]. If you think this rollback is in error, please leave a message on my talk page. <grognard#29090329>

--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -11,8 +11,7 @@ From the {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}.
 
 # An [[old]] [[soldier]].
 # {{context|games|slang|lang=en}} Someone who [[enjoys]] playing older war-games or roleplaying games, or older versions of such games, when newer ones are available.
-#: ''James is such a '''grognard''', he only plays the original edition of black ops 2
-
+#: ''James is such a '''grognard''', he only plays the original edition of Dungeons and Dragons.''
 #* {{seecites|lang=en}}
 
 ====Translations====
