--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -64,8 +64,8 @@
 ====Related terms====
 * [[subtract]]
 
-===See also===
-* [[addition]], [[summation]]: ([[augend]]) + ([[addend]]) = ([[summand]]) × ([[summand]]) = ([[sum]], [[total]])
+â===See also===
+* [[addition]], [[summation]]: ([[augend]]) + ([[addend]]) = ([[summand]]) + ([[summand]]) = ([[sum]], [[total]])
 * [[subtraction]]: ([[minuend]]) − ([[subtrahend]]) = ([[difference]])
 * [[multiplication]]: ([[multiplier]]) × ([[multiplicand]]) = ([[factor]]) × ([[factor]]) = ([[product]])
 * [[division]]: ([[dividend]]) ÷ ([[divisor]]) = ([[quotient]]), [[remainder]] left over if divisor does not divide dividend
