/* Etymology 2 */ {suffix} <lunger#29095007>

--- a/en/l/lunger.774569.wikitext
+++ b/en/l/lunger.774569.wikitext
@@ -12,7 +12,7 @@
 # A person who [[lunge]]s.
 
 ===Etymology 2===
-* [[lung]] + [[-er]]
+{{suffix|lung|er}}
 
 ====Pronunciation====
 * {{IPA|/lʌɳə/|lang=en}}
