--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|ang|en}} {{term|stæf|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*stabaz}}. Cognate with Dutch {{term|staf|lang=nl}}, German {{term|Stab|lang=de}}, Swedish {{term|stav|lang=sv}}. Sense of "group of military officers that assists a commander", attested from 1702, is influenced from German {{term|Stab|lang=de}}.
+From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*stabaz}}. Cognate with Dutch {{term|staf|lang=nl}}, German {{term|Stab|lang=de}}, Swedish {{term|stav|lang=sv}}. Sense of "group of military officers that assists a commander", attested from 1702, is influenced from German {{term|Stab|lang=de}}.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|stäf}}, {{IPA|/stɑːf/|lang=en}}
