--- a/en/c/CD-R.26223.wikitext
+++ b/en/c/CD-R.26223.wikitext
@@ -1,9 +1,8 @@
 ==English==
 
 ==={{initialism-old|en}}===
+{{en-initialism}}
 [[File:CDR-large.jpg|thumb|a Memorex 48x 700[[megabyte|MB]] CD-R]]
-
-{{head|en}}
 
 # Compact Disk - Read only or Compact Disk - Recordable; a form of digital media that is based on the use of a laser to read from a plastic disc.  It can only be written to once.
 
