--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Basque: {{t+|eu|untxi}}
 * Belarusian: {{t|be|трус|m|tr=trus}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
 * Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|শশ|tr=shasha|sc=Beng}}
+* Blackfoot: {{t|bla|aahtsista}}
 * Breton: {{t|br|lapin}}, {{t+|br|konikl}}
 * Bulgarian: {{t+|bg|заек|m|tr=zaek}}
 * Burmese: {{t+|my|ယုန်|tr=youn|sc=Mymr}}
@@ -70,6 +71,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Chinese:
 *: Mandarin: {{t+|cmn|兔子|tr=tùzi|sc=Hani}}, {{qualifier|white rabbit}} {{t+|cmn|白兔|tr=báitù|sc=Hani}}
 * Comanche: {{t|com|tabu}}
+* Cornish: {{t|kw|konin|m}}
 * Czech: {{t+|cs|králík|m}}
 * Danish: {{t+|da|kanin|c}}
 * Dena'ina: {{t|tfn|hvaya}}
