--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -311,7 +311,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Maori: {{t-check|mi|motu}}
 * Persian: {{t+check|fa|جَزِیرَه|tr=jazire|sc=fa-Arab}}
 * Sardinian: {{t-check|sc|isula|f}}
-* {{ttbc|sh}}
+* Serbo-Croatian
 *: Cyrillic: {{t-check|sh|острво|n|sc=Cyrl}}
 *: Roman: {{t-check|sh|ostrvo|n}}
 * Slovak: {{t-check|sk|ostrov|m}}
