Norwegian & Bokmål merged <bind#29104114>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -191,31 +191,28 @@ From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-
 # {{nl-verb form of|m=imp|binden}}
 
 ----
-
-==Norwegian==
-
-===Etymology===
-{{rfe|lang=no}}
+==Norwegian Bokmål==
 
 ===Pronunciation===
 * {{IPA|/bɪn/|lang=no}}
 * {{rhymes|ɪn|lang=no}}
 
-===Noun===
-{{no-noun|g=n}}
+===Etymology 1===
+From the verb {{term|binde|lang=nb}}
 
-# [[volume]] (a single book of a publication)
-# [[sling]] (a kind of hanging bandage)
+====Noun====
+{{nb-noun-n1}}
+
+# a [[volume]] (''single book of a published work'')
+# a [[sling]] (''kind of hanging bandage'')
 #: ''Han går med armen i '''bind'''''
-# [[sanitary napkin]]
+# a [[sanitary napkin]] {US) or [[sanitary towel]] (UK)
 
-====Inflection====
-{{no-noun-infl|nb-class=n1|nn-class=n1}}
+====References====
+* {{R:The Bokmål Dictionary}}
 
-----
-==Norwegian Bokmål==
-
-===Verb===
+===Etymology 2===
+====Verb====
 {{head|nb|verb form}}
 
 # {{form of|imperative|binde|lang=nb}}
