--- a/en/m/mackle.801840.wikitext
+++ b/en/m/mackle.801840.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+From {{etyl|frm|en}} {{term|macule|lang=frm}}, from {{etyl|la|en}} {{term|macula|lang=la}}.
+
 ===Noun===
 {{en-noun}}
 
