--- a/en/m/mallee fowl.745831.wikitext
+++ b/en/m/mallee fowl.745831.wikitext
@@ -14,6 +14,7 @@
 {{trans-top|''Leipoa ocellata''}}
 * Finnish: {{t+|fi|malleekana}}
 {{trans-mid}}
+* Russian: {{t|ru|глазчатая курица|f|sc=Cyrl}}
 {{trans-bottom}}
 
 [[Category:en:Birds]]
