--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -21,6 +21,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 #: ''Yes '''sir'''.''
 # An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown.
 #: ''Excuse me, '''sir''', could you tell me where the nearest bookstore is?''
+# {{cx|colloquial|lang=en}] {{n-g|Used as an intensifier after ''yes'' or ''no''|lang=en}}
 
 ====Derived terms====
 * [[sirrah]]
