--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -200,7 +200,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Ossetian: {{t|os|сакъадах}}
 * Ottoman Turkish: {{t|ota|جزیره|tr=cezîre|sc=ota-Arab}}, {{t|ota|آدا|tr=ada|sc=ota-Arab}}, {{t|ota|جزائر|p|tr=cezâir|sc=ota-Arab}}
 * Pashto: {{t+|ps|ټاپو|m|tr=ṯṯāpo|sc=ps-Arab}}
-* Persian: {{t+|fa|جزیره|tr=jazire|sc=fa-Arab}}
+* Persian: {{t+|fa|جزیره|tr=jazire|sc=fa-Arab}}, {{t+|fa|آداک|tr=âdâk|sc=fa-Arab}}
 * Phoenician: {{t|phn|𐤀𐤉|tr=ʔy|sc=Phnx}}
 * Pijin: {{t|pis|aelan}}
 * Pitcairn-Norfolk: {{t|pih|ailen}}
