--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -12,6 +12,9 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 
 # {{context|informal|lang=en}} A [[device]] or [[machine]] that is useless because it does not work properly or has failed to work, such as a [[bomb]], or explosive projectile.
 # A [[lottery]] ticket that does not give a payout.
+# Something that doesn't [[function]] properly
+#* '''2014''', A teacher, "[http://www.theguardian.com/education/2014/sep/23/choosing-primary-school-guide-teachers-guide-for-parents Choosing a primary school: a teacher's guide for parents]", ''The Guardian'', 23 September 2014:
+#*: At the end of the day, the vast majority of primary schools are vibrant, friendly places and you may struggle to choose one because they all seem so great. Primary schools tend to have the feelgood factor. If you just aren't feeling it, this one's probably a '''dud'''.
 # {{context|obsolete|lang=en}} Clothes, now always used in plural form [[duds]].
 # A [[loser]], an unlucky person
 
