--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -370,6 +370,9 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 ===Etymology===
 {{rfe|lang=sco}}
 
+===Pronunciation===
+{{rfp|lang=sco}}
+
 ===Noun===
 {{sco-noun}}
 # An {{l|en|island}}.
