t+sne:[[oyuo]] t+bdr:[[menungal]] t+bdr:[[ogok]] t+kqr:[[wogok]] t+sib:[[bu'in]] t+bdr:[[bakas]] t+mvv:[[bawi]] t+mvv:[[biag]] t+iba:[[babi]] t+mel:[[babui]] ([[WT:EDIT|Assisted]]) <pig#29116714>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -129,6 +129,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Azeri: {{t+|az|donuz}}
 * Balinese: {{t|ban|celeng}}
 * Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
+* Bau Bidayuh: {{t|sne|oyuo}}
 * Belarusian: {{t|be|свіння́|f}}
 * Bengali: {{t|bn|শুওর|tr=shuor|sc=Beng}}
 * Breton: {{t+|br|pemoc'h|m}}
@@ -138,6 +139,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Campidanese Sardinian: {{t|sro|procu|m}}, {{t|sro|mannali|m}}, {{t|sro|sue|f}}
 * Catalan: {{t+|ca|porc|m}}
 * Cebuano: {{t|ceb|baboy}}
+* Central Melanau: {{t|mel|babui}}
 * Chamicuro: {{t|ccc|kuuchi}}
 * Chamorro: {{t|ch|babui}}
 * Chechen: {{t|ce|жаргӏа}}
@@ -169,7 +171,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Hebrew: {{t+|he|חֲזִיר|m|tr=khazír}}
 * Hindi: {{t|hi|सूअर|m|tr=sū'ar|sc=Deva}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
-* Iban: {{t|iba|jani}}
+* Iban: {{t|iba|jani}}, {{t|iba|babi}}
 * Icelandic: {{t+|is|svín|n}}
 * Ido: {{qualifier|♂♀}} {{t+|io|porko}}, {{qualifier|♂}} {{t+|io|porkulo}}, {{qualifier|♂♀}} {{t+|io|porkino}}
 * Ilocano: {{t|ilo|baboy}}
@@ -185,6 +187,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Karelian: {{t|krl|počči}}
 * Kazakh: {{t|kk|шошқа}}
 * Khmer: {{t+|km|ជ្រូក|tr=jruuk|sc=Khmr}}, {{t|km|សត្វជ្រូក|tr=sat jruuk|sc=Khmr}}
+* Kimaragang: {{t|kqr|wogok}}
 * Korean: {{t+|ko|돼지|sc=Kore}}
 * Kumyk: {{t|kum|донгуз|tr=doñuz|sc=Cyrl}}
 * Kurdish:
@@ -232,6 +235,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Sanskrit: {{t|sa|सूकर|tr=sūkara|sc=Deva}}
 * Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
 * Scottish Gaelic: {{t|gd|muc|f}}
+* Sebop: {{t|sib|bu'in}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|сви́ња|f}}
 *: Roman: {{t+|sh|svínja|f}}
@@ -245,6 +249,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Spanish: {{t+|es|cerdo|m}}, {{t+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{t|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{t+|es|coche|m}} {{qualifier|Guatemala}}, {{t+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{t|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{t+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{t+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{t+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{t+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{t+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{t+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{t+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{t+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{t+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t|es|tunco|m}} {{qualifier|El Salvador}}
 * Swahili: {{t+|sw|nguruwe}}, {{t+|sw|nguruwe}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
+* Tagal Murut: {{t|mvv|bawi}}, {{t|mvv|biag}}
 * Tagalog: {{t+|tl|baboy}}
 * Tajik: {{t|tg|хук}}
 * Tamil: {{t+|ta|பன்றி}}
@@ -272,6 +277,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Volapük: {{qualifier|♂♀}} {{t+|vo|svin}}, {{qualifier|♂}} {{t+|vo|hisvin}}, {{qualifier|♀}} {{t+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{t|vo|omsvin}}, {{t|vo|domasvin}} {{qualifier|domestic}}
 * Walloon: {{t+|wa|pourcea}}
 * Welsh: {{t+|cy|mochyn|m}}
+* West Coast Bajau: {{t|bdr|menungal}}, {{t|bdr|ogok}}, {{t|bdr|bakas}}
 * West Frisian: {{t|fy|baarch|c}}
 * Wolof: {{t|wo|mbam-xuux|alt=mbam-xuux mi}}
 * Yiddish: {{t|yi|חזיר|tr=khazer|m}}
