--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -1,12 +1,13 @@
 ==English==
 {{wikipedia}}
 
+===Etymology===
+From {{etyl|frm|en}}, from {{etyl|fro|en}} {{term|multiplicacion|lang=fro}}, from {{etyl|la|en}} {{term|multiplicatio|lang=la}}
+
 ===Pronunciation===
 * {{a|US}} {{IPA|/ˌmʌltəplɪˈkeɪʃən/|[ˌmʌltɪ̈plɪˈkʰeɪ̯ʃ(ɪ̈)n]|lang=en}}
 * {{rhymes|eɪʃən|lang=en}}
 
-===Etymology===
-* Derived from [[Latin]] term [[multiplicare]]
 
 ===Noun===
 {{en-noun|~}}
