--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -346,6 +346,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n}}
+* Indonesian: {{t+|id|babi}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
 * Latvian: {{t+|lv|cūka|f}}
 {{trans-mid}}
