--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -6,6 +6,9 @@
 
 # A city in the northwest of [[Baja California]], [[Mexico]], by the American border with [[San Diego]].
 
+====Translations====
+* Spanish: {{t|es|Tijuana|f}}
+
 ===Anagrams===
 * [[Juanita#English|Juanita]]
 
