t+mi:[[ kahurangi]] ([[WT:EDIT|Assisted]]) <dame#29129733>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -34,6 +34,7 @@
 {{trans-bottom}}
 
 {{trans-top|equivalent title to Sir for a female knight}}
+* Maori: {{t|mi| kahurangi}}
 * Portuguese: {{t+|pt|dama|f}}
 * Russian: {{t+|ru|леди|f|tr=lédi|sc=Cyrl}}, {{t|ru|дейм|f|tr=dɛjm|sc=Cyrl}}, {{t+|ru|дама|f|tr=dáma|sc=Cyrl}}
 {{trans-mid}}
