t+lv:[[atsvars]] ([[WT:EDIT|Assisted]]) <weight#29130234>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -131,7 +131,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-mid}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
-* Latvian: {{t+|lv|svars|m}}
+* Latvian: {{t+|lv|svars|m}}, {{t+|lv|atsvars|m}}
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
