--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -75,7 +75,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 * Portuguese: {{t|pt|rato almiscareiro|m}}
 * Romanian: {{t+|ro|bizam}}
 * Romansch: {{t|rm|undatra}}
-* Russian: {{t+|ru|ондатра|f}}, {{t+|ru|выхухоль|f}}
+* Russian: {{t+|ru|онда́тра|f}}
 * Saanich: {{t|str|sq̕əɬq̕əɬ}}
 * Sardinian: {{t|sc|medrona muscada}}, {{t|sc|topi muscau}}
 * Serbo-Croatian:
