--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -77,7 +77,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 * Norwegian: {{t|no|murmeldyr}}
 * Occitan: {{t|oc|marmòta}}, {{t|oc|muret}}
 * Polish: {{t+|pl|świstak}}, {{t|pl|świszcz|m}}
-* Portuguese: {{t+|pt|marmota}}
+* Portuguese: {{t+|pt|marmota|f}}
 * Romanian: {{t+|ro|marmota}}
 * Romansch: {{t|rm|muntanella}}
 * Russian: {{t+|ru|сурок|m|tr=surók}}
