--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -7,6 +7,9 @@
 ===Etymology===
 From earlier {{term|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft|lang=en}}.
 
+===Pronunciation===
+{{rfp|lang=en}}
+
 ===Verb===
 {{en-verb}}
 
