t+mi:[[kareparāoa]] ([[WT:EDIT|Assisted]]) <cauliflower#29137082>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -61,6 +61,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * Lithuanian: {{t|lt|žiedinis kopūstas|m}}
 * Macedonian: {{t|mk|карфиол|m|tr=karfiól}}
 * Malay: {{t|ms|kubis bunga}}
+* Maori: {{t|mi|kareparāoa}}
 * Navajo: {{t|nv|chʼil łigaii}}, {{t|nv|sęęschʼil}}
 * Persian: {{t|fa|کلم گل|sc=fa-Arab}}
 * Polish: {{t+|pl|kalafior|m}}
