t+sv:[[bjuda]] ([[WT:EDIT|Assisted]]) <bid#29138074>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 {{trans-mid}}
 * French: {{t+|fr|soumissionner}} (for contract)
 * German: {{t+|de|bieten}}
+* Swedish: {{t+|sv|bjuda}}
 {{trans-bottom}}
 
 {{trans-top|transitive: to announce goal}}
