t+qu:[[hinaspa]] ([[WT:EDIT|Assisted]]) <then#29138757>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -249,6 +249,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
 * Polish: {{t+|pl|to}}, {{t+|pl|wówczas}}
 * Portuguese: {{t+|pt|então}}, [[nesse]] {{t+|pt|caso}}
+* Quechua: {{t|qu|hinaspa}}
 * Romanian: {{t+|ro|atunci}}, {{t+|ro|apoi}}
 * Russian: {{t+|ru|тогда|tr=togdá}}, {{t|ru|в таком случае|tr=v takóm slúčaje|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|ma-thà}}, {{t|gd|a-rèist}}
