--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -83,7 +83,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * Dutch: {{t+|nl|-um}}
 * French: {{t+|fr|-um}}
 * German: {{t|de|-um}}
-* Greek: {{t+|el|-ο|tr=-o}}, {{t|el|-ον|tr=-on}}
+* Greek: {{t+|el|-ο}}, {{t|el|-ον}}
 {{trans-mid}}
 * Italian: {{t+|it|-o}}, {{t+|it|-a}}
 * Japanese: {{t|ja|ウム|tr=[[-umu]]}}
