--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -16,6 +16,14 @@
 
 ==Latin==
 
+===Etymology===
+From {{term|amicus||friendly, amicable|lang=la}}
+
+===Adverb===
+'''amice'''
+
+# In a friendly manner; amicably.
+
 ===Noun===
 {{la-noun-form|amice}} {{g|m}}
 
